--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Bebas+Neue&display=swap');
+
 .App {
   text-align: center;
 }
@@ -9,6 +11,7 @@ img {
 
 h2{
     text-align: left;
+    font-family: "Montserrat", sans-serif;
 }
 
 .wrapper {
